venndb-usage/tests/fails/derive_tuple_struct.stderr
error: Only Structs with named fields are supported
 --> tests/fails/derive_tuple_struct.rs:4:1
  |
4 | struct MyStruct(u32);
  | ^^^^^^^^^^^^^^^^^^^^^
